--- a/css/main.css
+++ b/css/main.css
@@ -24,7 +24,11 @@ section{
 	margin-bottom:10px;
 }
 
-button{
+button {
+    cursor: pointer;
+}
+
+#newItem button {
 	border-color:var(--fg);
 	border-style:solid;
 	border-width:2px;
@@ -43,8 +47,4 @@ button:active{
 
 input[type="checkbox"]:checked{
 	color:var(--fg);
-}
-
-.container {
-	overflow-y:auto;
 }
